fix: Remove top border from topic list body on mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -471,6 +471,7 @@
 
   .topic-list-body {
     display: block;
+    border-top: none;
   }
 
   .topic-list-item {
